# aosp-hal-demo

./: CONTRIBUTING.md  README.md  yes  yes.pub
FlashTune/: README.md  settings.gradle
FlashTune/aidl/: ILedManager.aidl
FlashTune/app/: AndroidManifest.xml  MainActivity.java  activity_main.xml  build.gradle
FlashTune/app/src/main/: AndroidManifest.xml
FlashTune/app/src/main/cpp/: CMakeLists.txt
FlashTune/app/src/main/res/layout/: activity_main.xml
FlashTune/app/src/main/res/values/: strings.xml  styles.xml  themes.xml
FlashTune/app/src/main/res/values-night/: themes.xml
FlashTune/framework/: LedManager.java  LedManagerTest.java  LedManagerTestTemplate.java
FlashTune/gradle/wrapper/: gradle-wrapper.properties
FlashTune/hal/: hal_module_template.cpp  led_hal.cpp  led_hal.h  led_hal_test.cpp
FlashTune/jni/: led_jni.cpp  led_jni_test.cpp
FlashTune/service/: LedManagerService.java
PulsePlay/: README.md  settings.gradle
PulsePlay/aidl/: IHapticsService.aidl
PulsePlay/app/: build.gradle
PulsePlay/app/src/main/: AndroidManifest.xml
PulsePlay/app/src/main/cpp/: CMakeLists.txt  HapticsHal.cpp  HapticsJni.cpp  IHapticsHal.h
PulsePlay/app/src/main/res/layout/: activity_main.xml
PulsePlay/app/src/main/res/values-night/: themes.xml
PulsePlay/docs/: overview.md
PulsePlay/framework/: HapticsManager.java  HapticsManagerTest.java  build.gradle
PulsePlay/gradle/wrapper/: gradle-wrapper.properties
PulsePlay/hal/: HapticsHal.cpp  test_HapticsHal.cpp
PulsePlay/jni/: CMakeLists.txt  HapticsJni.cpp
PulsePlay/service/: HapticsManagerService.java
(+8 files in other folders)
